--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-lite-iframe",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Simple web componet that renders the youtube iframe only when you click on the video thumbnail. This way it avoids the immediate loading of youtube resources, helping the performance of your website.",
   "main": "dist/index.js",
   "browser": "dist-browser/index.js",
@@ -20,7 +20,7 @@
   },
   "keywords": ["youtube", "iframe", "lite","astro", "embed", "youtube-lite"],
   "author": "Stron",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "devDependencies": {
     "typescript": "^5.0.3"
   }
